[package]
name = "cipher-crypt"
version = "0.4.0"
authors = ["arosspope <andrew.pope456@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/arosspope/cipher-crypt.git"
repository = "https://github.com/arosspope/cipher-crypt.git"
description = "A cryptographic tomb of ciphers forgotten by time."
keywords = ["cipher", "crypto", "caesar", "rot13", "vigenere"]
readme = "README.md"
documentation = "https://docs.rs/cipher-crypt/"

[lib]
name = "cipher_crypt"

[dependencies]
num = "^0.1"
rulinalg = "^0.4"
