[package]
name = "cipher-crypt"
version = "0.17.0"
authors = ["arosspope <andrew.pope456@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/arosspope/cipher-crypt.git"
repository = "https://github.com/arosspope/cipher-crypt.git"
description = "A cryptographic tomb of ciphers forgotten by time."
keywords = ["cipher", "classical", "crypto", "caesar", "adfgvx"]
categories = ["algorithms", "cryptography"]
readme = "README.md"
documentation = "https://docs.rs/cipher-crypt/"
edition = '2018'

[lib]
name = "cipher_crypt"

[dependencies]
lazy_static = "^1"
maplit = "^1.0.1"
lipsum = "^0.6"
num = "^0.1"
rulinalg = "^0.4"
